--- a/Sekar alit.html
+++ b/Sekar alit.html
@@ -25,7 +25,7 @@ font-family: "bali_jelih_std";
 </style>
 <style>
 body {
-  background-image: url("https://3.bp.blogspot.com/-q6fw31zhHsM/W0dafMxM6pI/AAAAAAAAErU/ezQk7ddaWfo_f7SEXlXxTtcd9QCdMGh7ACEwYBhgL/s1600/icon-dharma-Gita.png");
+  background-image: url("bgapp.jpg");
  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
